# VaccineTracker

./: .gitignore  CMakeLists.txt  Makefile  README.md  display.c  display.h  doctor.c  doctor.h  doctor.out  file.c  file.h  main.c  main.out  person.c  person.h  person.out  record.c  record.h  record.out  vaccine.c  vaccine.h  vaccine.out
data/: doctor.csv  person.csv  record.csv  vaccine.csv
generate/: Makefile  generate.c  generate.h  id.c  id.h  main.c  main.out  snowflake.c  snowflake.h
include/generator/: generate.h  id.h
include/main/: display.h  doctor.h  person.h  record.h  vaccine.h
include/shared/: data.h  snowflake.h
src/generator/: generate.c  generator.c  id.c
src/main/: display.c  doctor.c  main.c  person.c  record.c  vaccine.c
src/shared/: data.c  snowflake.c
